fix layout issues

--- a/style.css
+++ b/style.css
@@ -52,24 +52,11 @@ header {
 	justify-content: space-around;
 }
 
-.header-text {
-	align-items: flex-end;
-  background-color: #ffffff7d;
-  border-radius:  0.5rem 0.5rem 0.5rem 0.5rem;
-	box-shadow: 0px 0px 5px 5px rgba(255,255,255,0.43);
-	display: flex;
-  color: rgb(50, 50, 50);
-	flex-direction: row;
-	justify-content: space-between;
-	margin-bottom: 1rem;
-	padding: 0.1rem;
-	width: 100%;
-}
-
 .head {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	width: 35%;
 }
 
 .intro {
